--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <p>
 
     &#9679; During SQL course on Udemy </p>
-  <p> &#9679; During HTML course on udemy </p>
+  <p> &#9679; During HTML course on Udemy </p>
 
   </p>
   </p>
