--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
   <hr>
   <h3>Eduction</h3>
   <p>
-    &#9679; Graduation from High Scholl on mathematical-physical profile 2021 </p>
-  <p> &#9679; Certificate of Digital Marketing from Google 2022 </p>
+    &#9679; Graduation from High Scholl on mathematical-physical profile </p>
+  <p> &#9679; Certificate of Digital Marketing from Google </p>
   <p>
 
     &#9679; During SQL course on Udemy </p>
