--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
   </p>
   </p>
   <hr>
-  <h3>Work Experience</h3>
+  <h3>Experience</h3>
   <table>
 <thead>
     <tr>
       <th>Dates</th>
-        <th>Work</th>
+        <th>Occupation</th>
     </tr>
   </thead>
 <tbody>
