--- a/hobbies.html
+++ b/hobbies.html
@@ -20,7 +20,7 @@
       <a href="https://www.youtube.com/watch?v=PHbsTIu-XgM">swimming</a>
       </li>
       <li>
-      <a href="https://www.youtube.com/watch?v=p3nBLP7hjJ0">playing games</a>
+      <a href="https://steamcommunity.com/">playing games</a>
       </li>
       <li>
         <a href="https://www.w3schools.com/html/html_links.asp">programming</a>
